src/app/home/home.component.scss
.centered {
	display:flex;
	flex-direction: column;
	align-items: center;
	font-size: 2.5vh;
	img {
		width: 800px;
		max-width: 90vw;
		height: auto;
		padding: 3vh 2vw;
	}
	h2 {
		padding: 5vh 0 0 0;
		font-size: 2.2em;
		text-align: center;
	}
	.contact {
		padding: 6vh 0 0 0;
	}
}

.content {
	padding: 2vh 8vw;
	line-height: 1.5;
}

.post {
	padding: 1vh 12vw 1vh 12vw;
	text-align: center;
}

.example {
	padding: 5vh 2vw 0 2vw;
	display: flex;
	align-items: center;
	width: 100%;
	justify-content: space-evenly;
	img {
		width: auto;
		height: 30vh;
		padding: 3vh 4vw;
	}
}

.handheld {
	flex-direction: column;
	justify-content: center;
	text-align: center;
}

.even {
	flex-direction: row-reverse;
}

.space {
	padding: 5vh 0;
}

